cmake_minimum_required(VERSION 3.8)
project(drone_fleet)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(std_srvs REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

include_directories(include)

add_executable(drone_node
  src/drone_node.cpp
  src/Vehicle.cpp
  src/Drone.cpp
  src/MissionDrone.cpp
  src/AutonomousDrone.cpp
)

ament_target_dependencies(
  drone_node
  rclcpp
  std_msgs
  std_srvs
)

add_executable(fleet_manager
  src/fleet_manager.cpp
)

ament_target_dependencies(
  fleet_manager
  rclcpp
  std_msgs
  std_srvs
)

add_executable(health_monitor
  src/health_monitor.cpp
)

ament_target_dependencies(
  health_monitor
  rclcpp
  std_msgs
  std_srvs
)

install(
  TARGETS
    drone_node
    fleet_manager
    health_monitor
  DESTINATION lib/${PROJECT_NAME}
)

install(
  DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)

ament_package()
